# KETI-DDI

./: .gitignore
device_module/: device_instance.py  device_master.py
device_module/flipper_module/: PythonLibMightyZap.py  flipper_master.py  flipper_slave.py
device_module/mover_module/: mover_master.py  mover_slave.py
robot_module/: CMakeLists.txt  package.xml  robot_master normal_test.py  robot_master.py  robot_master_hj.py
robot_module/gripper/: keti_zimmer_gripper.py
robot_module/robot/: Parent_Robot.py  robot_a0509_master.py  robot_a0509_master_socket.py  robot_a0509_slave.py  robot_a0509_slave_socket.py  robot_m1013_slave.py
